# Pressing-Room

./: GITHUB_REVIEW_SETUP.md  PROJECT_STATUS_REPORT.md  README.md  REPO_STRUCTURE.md  SPRINT_0_CHECKLIST.md
backend/: pyproject.toml
backend/app/: __init__.py  cache.py  config.py  database.py  main.py
backend/app/routers/: fixtures.py  health.py  homepage.py  matches.py  scorers.py  standings.py  teams.py
backend/app/schemas/: common.py  match.py  scorer.py  standings.py  team.py
backend/migrations/: 001_initial_schema.sql
backend/pipeline/: __init__.py  aggregates.py  ingest.py  normalize.py  qa.py  validate.py  xg_model.py
backend/scripts/: __init__.py  ingest_all_matches.py  ingest_one_match.py  train_xg_model.py
backend/tests/: test_normalize.py
frontend/: next.config.mjs  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/fixtures/: page.tsx
frontend/app/methodology/: page.tsx
frontend/app/pro/: page.tsx
frontend/app/results/: page.tsx
frontend/app/scorers/: page.tsx
frontend/app/standings/: page.tsx
frontend/components/layout/: Footer.tsx  TopNav.tsx
frontend/components/matches/: FixtureCard.tsx  MatchweekNavigator.tsx
frontend/components/pages/: SprintZeroDemo.tsx
frontend/components/teams/: FormStrip.tsx  TeamBadge.tsx
frontend/contexts/: ThemeContext.tsx  ViewModeContext.tsx
frontend/hooks/: useFixtures.ts  useHomepage.ts  useMatch.ts  useScorers.ts  useStandings.ts  useTeamOverview.ts
frontend/lib/: api.ts  constants.ts  formatters.ts
(+13 files in other folders)
