[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pressing-room-backend"
version = "0.1.0"
description = "Pressing Room — Football Analytics API"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    # Database
    "asyncpg==0.29.0",
    "sqlalchemy[asyncio]==2.0.36",
    # Validation & settings
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    # Data pipeline
    "pandas==2.2.3",
    "numpy==1.26.4",
    "scikit-learn==1.5.2",
    "joblib==1.4.2",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "ruff==0.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
